<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.opensourcebim.levelout</groupId>
	<artifactId>LevelOutPlugins</artifactId>
	<version>0.16-SNAPSHOT</version>
	<name>LevelOutSerializers</name>
	<organization>
		<name>Bauhaus-Universität Weimar</name>
		<url>https://www.uni-weimar.de</url>
	</organization>
	<properties>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<bimserver.version>1.5.184</bimserver.version>
	</properties>
	<build>
		<resources>
			<resource>
				<targetPath>plugin</targetPath>
				<directory>plugin</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${basedir}/src/test/resources</directory>
			</testResource>
		</testResources>
	</build>
	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>topobyte</id>
			<name>TopoByte</name>
			<url>https://mvn.topobyte.de</url>
		</repository>
		<repository>
			<id>slimjars</id>
			<name>SlimJars</name>
			<url>https://mvn.slimjars.com</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- Opensource BIMserver -->
		<dependency>
			<groupId>org.opensourcebim</groupId>
			<artifactId>pluginbase</artifactId>
			<version>${bimserver.version}</version>
		</dependency>
		<dependency>
			<groupId>org.opensourcebim</groupId>
			<artifactId>bimserverjar</artifactId>
			<version>${bimserver.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- IndoorGML -->
		<dependency>
			<groupId>com.github.highsource.ogc-schemas</groupId>
			<artifactId>gml-v_3_2</artifactId>
			<version>18ce89928006eee08ed7e5a6ce6ea016436a444b</version>
		</dependency>
		<dependency>
			<groupId>com.github.highsource.ogc-schemas</groupId>
			<artifactId>indoorgml-v_1_0</artifactId>
			<version>18ce89928006eee08ed7e5a6ce6ea016436a444b</version>
		</dependency>
		<!-- TODO: use JAXB 2 maven plugin to generate OGC schemas on build -->
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.2</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.3</version>
		</dependency>

		<!-- OpenStreetMap -->
		<dependency>
			<groupId>de.topobyte</groupId>
			<artifactId>osm4j-xml</artifactId>
			<version>0.1.3</version>
		</dependency>
		<dependency>
			<groupId>de.topobyte</groupId>
			<artifactId>osm4j-core</artifactId>
			<version>0.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.slimjars.trove4j</groupId>
			<artifactId>trove4j-long-array-list</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.locationtech.proj4j</groupId>
			<artifactId>proj4j</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.locationtech.proj4j</groupId>
			<artifactId>proj4j-epsg</artifactId>
			<version>1.2.2</version>
		</dependency>

		<!-- CityGML4J -->
		<dependency>
			<groupId>org.citygml4j</groupId>
			<artifactId>citygml4j-xml</artifactId>
			<version>3.0.0-rc.4</version>
		</dependency>
		<dependency>
			<groupId>org.citygml4j</groupId>
			<artifactId>citygml4j-core</artifactId>
			<version>3.0.0-rc.4</version>
		</dependency>
		<dependency>
			<groupId>org.xmlobjects.gml</groupId>
			<artifactId>gml-objects</artifactId>
			<version>1.0.0-rc.5</version>
		</dependency>

		<!-- Various utility libraries -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.12.6.1</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
</project>